stateDiagram-v2
    [*] --> draft: Advertiser creates request
    
    draft --> submitted: Advertiser submits brief
    
    submitted --> negotiating: Channel requests edits
    negotiating --> submitted: Advertiser updates brief
    
    submitted --> funded: Channel accepts request\n(System locks funds)
    
    funded --> approved: Creative finalized & Approved by Advertiser\n(Ready to auto-post)
    
    approved --> posted: Bot auto-posts to Channel
    
    posted --> monitoring: Post verified on Telegram\n(Timer starts)
    
    monitoring --> released: Timer ends (e.g. 24h)\nFunds released to Channel
    
    monitoring --> cancelled: Post deleted prematurely\n(Partial refund/Dispute)
    
    released --> [*]
    
    submitted --> cancelled: Rejected / Timeout
    funded --> cancelled: Timeout / Mutual Cancel
    
    note right of funded
        Funds are held in
        System Escrow
    end note
    
    note right of monitoring
        Bot checks every X min
        to ensure post exists
    end note
